--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name:     FiftySevenChevy
-Theme URI:      http://jsanweb.com/silverblade
+Theme URI:      https://github.com/jsilverblade/57Chevy
 Author:         John Silverblade
 Author URI:     http://jsanweb.com/silverblade
 Description:    A simple business theme with retro styling
